Bug 1183044 - Properly mute AudioContext when there's an attempt to mute it before it has a destination. r=ehsan, a=ritu